--- a/src/App.xaml
+++ b/src/App.xaml
@@ -4,6 +4,17 @@
              xmlns:local="clr-namespace:gtaOnlineManagement"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <Style x:Key="LabelStyle" TargetType="{x:Type Label}">
+            <Setter Property="Foreground" Value="#dcddde"/>
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+            <Setter Property="FontSize" Value="12"/>
+        </Style>
+        <Style x:Key="TextBlockStyle" TargetType="{x:Type TextBlock}">
+            <Setter Property="Foreground" Value="#dcddde"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="12"/>
+        </Style>
+
         <Style x:Key="CasinoButtonStyle" TargetType="{x:Type Button}">
             <Setter Property="Background" Value="#008dd9"/>
             <Setter Property="Height" Value="20"/>
