--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:local="clr-namespace:gtaOnlineManagement"
         mc:Ignorable="d"
         Title="MainWindow"
+        Icon="https://avatars3.githubusercontent.com/u/27494805"
         Height="264" 
         Width="400" 
         ResizeMode="NoResize" 
