--- a/src/App.xaml
+++ b/src/App.xaml
@@ -8,11 +8,14 @@
             <Setter Property="Foreground" Value="#dcddde"/>
             <Setter Property="HorizontalAlignment" Value="Right"/>
             <Setter Property="FontSize" Value="12"/>
+            <Setter Property="Margin" Value="0 0 4 0"/>
         </Style>
         <Style x:Key="TextBlockStyle" TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="#dcddde"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="12"/>
+            <Setter Property="Margin" Value="8 0"/>
         </Style>
 
         <Style x:Key="CasinoButtonStyle" TargetType="{x:Type Button}">
