--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -75,13 +75,11 @@
         <!-- Casino -->
         <StackPanel x:Name="Casino" Orientation="Vertical">
             <TextBlock Text="Casino" FontWeight="Bold" FontSize="14" Foreground="#dcddde" Margin="8 2 0 0"/>
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#00a6ff">
+            <StackPanel Orientation="Horizontal" Background="#00a6ff">
                 <Label Content="Casino Lucky Wheel" Style="{StaticResource LabelStyle}"></Label>
                 <Button Style="{StaticResource CasinoButtonStyle}"
                     IsEnabled="True">
-                    <Viewbox Width="16" Height="16">
-                        <Image Source="icons/spin.png"/>
-                    </Viewbox>
+                    <Image Source="icons/spin.png" Width="16" Height="16"/>
                 </Button>
                 <TextBlock Text="hh/mm" Style="{StaticResource TextBlockStyle}"/>
             </StackPanel>
@@ -96,7 +94,7 @@
                 <Button Style="{StaticResource BusinessButtonStyle}"
                     IsEnabled="True">
                     <Viewbox Width="16" Height="16">
-                        <Image Source="icons/resupply.png"/>
+                        <Image Source="icons/resupply.png" Width="16" Height="16"/>
                     </Viewbox>
                 </Button>
                 <TextBlock Text="hh/mm" Style="{StaticResource TextBlockStyle}"/>
@@ -106,9 +104,7 @@
                 <Label Content="Coke Supplies" Style="{StaticResource LabelStyle}"></Label>
                 <Button Style="{StaticResource BusinessButtonStyle}"
                     IsEnabled="False">
-                    <Viewbox Width="16" Height="16">
-                        <Image Source="icons/resupply.png"/>
-                    </Viewbox>
+                    <Image Source="icons/resupply.png" Width="16" Height="16"/>
                 </Button>
                 <TextBlock Text="hh/mm" Style="{StaticResource TextBlockStyle}"/>
             </StackPanel>
@@ -117,9 +113,7 @@
                 <Label Content="Cash Supplies" Style="{StaticResource LabelStyle}"></Label>
                 <Button Style="{StaticResource BusinessButtonStyle}"
                     IsEnabled="False">
-                    <Viewbox Width="16" Height="16">
-                        <Image Source="icons/resupply.png"/>
-                    </Viewbox>
+                    <Image Source="icons/resupply.png" Width="16" Height="16"/>
                 </Button>
                 <TextBlock Text="hh/mm" Style="{StaticResource TextBlockStyle}"/>
             </StackPanel>
@@ -128,9 +122,7 @@
                 <Label Content="Meth Supplies" Style="{StaticResource LabelStyle}"></Label>
                 <Button Style="{StaticResource BusinessButtonStyle}"
                     IsEnabled="False">
-                    <Viewbox Width="16" Height="16">
-                        <Image Source="icons/resupply.png"/>
-                    </Viewbox>
+                    <Image Source="icons/resupply.png" Width="16" Height="16"/>
                 </Button>
                 <TextBlock Text="hh/mm" Style="{StaticResource TextBlockStyle}"/>
             </StackPanel>
@@ -139,9 +131,7 @@
                 <Label Content="Weed Supplies" Style="{StaticResource LabelStyle}"></Label>
                 <Button Style="{StaticResource BusinessButtonStyle}"
                     IsEnabled="False">
-                    <Viewbox Width="16" Height="16">
-                        <Image Source="icons/resupply.png"/>
-                    </Viewbox>
+                    <Image Source="icons/resupply.png" Width="16" Height="16"/>
                 </Button>
                 <TextBlock Text="hh/mm" Style="{StaticResource TextBlockStyle}"/>
             </StackPanel>
